cluster/mediaserver/gamevault/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: gamevault
    app.kubernetes.io/version: 17.0.1
  name: gamevault
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gamevault
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gamevault
        app.kubernetes.io/version: 17.0.1
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      dnsPolicy: None
      dnsConfig:
        nameservers:
        - 10.43.0.53
        searches:
        - jellyfin.svc.cluster.local
        - svc.cluster.local
        - cluster.local
      containers:
      - image: phalcode/gamevault-backend:17.0.1@sha256:f3c599d4fc7498eb2028cfd611dc27b3f707c83a7ce9a86ec3ec8256a42409ba
        name: gamevault
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - mountPath: /gamevault
          name: config
        - mountPath: /data
          name: media
        resources:
          requests:
            cpu: 50m
            memory: 192Mi
          limits:
            cpu: "1"
            memory: 1Gi
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsUser: 1000
          runAsGroup: 10
          allowPrivilegeEscalation: false
          runAsNonRoot: true
        readinessProbe:
          httpGet:
            path: /api/status
            port: 8080
          periodSeconds: 30
        startupProbe:
          httpGet:
            path: /api/status
            port: 8080
          periodSeconds: 10
          failureThreshold: 60
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: gamevault-config
      - name: media
        persistentVolumeClaim:
          claimName: jellyfin-pvc
